Sketch is done, very messy

--- a/thesis/holmes.tex
+++ b/thesis/holmes.tex
@@ -317,9 +317,9 @@ We then check the model as usual, with the additional constraint that if the pre
 We identify the canonical model as the Herbrand minimal model corresponding to the above.
 
 We now develop a kripke structure.
-The set of worlds is the set of programs as described above which have a canonical model.
+The set of worlds is the set of programs which have a canonical model as described above.
 %TODO do I need to rule out reflexivity here? Mandate it? I forget.
-For a program $\Pi$ and $\Pi'$, we define the accessibility relation to be: $\Pi \leq Pi'$ iff both the EDB and the rules of $\Pi$ are $\subseteq$ those in $\Pi'$.
+For a program $\Pi$ and $\Pi'$, we define the accessibility relation to be: $\Pi \leq Pi'$ iff both the EDB of $\Pi$ is $\subseteq$ those in $\Pi'$.
 For base (non-modal) formulae, we say $\Pi \models P$ iff the canonical model of $\Pi$ contains $P$.
 We say $\Pi \models \boks P$ iff $\forall \Pi' | \Pi \leq \Pi'. \Pi' \models P$.
 We say $\Pi \models \dia P$ iff $\exists \Pi' | \Pi \leq \Pi'. \Pi' \models P$.
@@ -348,10 +348,24 @@ Said stable set adds to the program the negation of everything not in the set by
 In our case, the kripke structure both makes our search procedure easier, and will make it easier to avoid the possibility that a program with no negation in its EDB has no legal output model (via call-cc).
 \todo{Mention connection to autoepistemic expansions?}
 
-\todo{Describe how it works with real circumscription}
-%Real circumscription:
-%Assumptions now take the form of an additional rule which says "If there is a \vec{a} for this \vec{x} that is bigger than mine, produce \bot
-% Will need to rewrite previous "addl restriction" into a rule transformation for this.
+As described in our informal section\todo{ref}, Holmes implements negation by allowing the user to receive an aggregation with the assurence that it is the \emph{largest} aggregation it will ever receive.
+To pivot from our simple model to this primarily requires a shift in what modifications are made to $\Pi$, and an augmentation of the model.
+For every predicate which is circumscribed over, add to the model a new predicate $P_c$, and rewrite the rules to reference it instead when circumscribing.
+Add to the program the rules
+\todo{rename $P_d$ something more sensical}
+\[P_c(\vec{x}, \vec{a}) \leftarrow P(\vec{x}, \vec{a}) & P_d(\vec{x}, \vec{a})\]
+\[P_c(x_0, ..., x_m, \wedge_0(a_0, b_0), \wedge_n(a_n, b_n)) \leftarrow P_c(x_0, ..., x_m, a_0, ..., a_n) \& P(x_0, ..., x_m, b_0, ..., b_n)\]
+and for i ranging from 0 to n, additional rules
+\[\bot \leftarrow P_c(x_0, ... x_m, ..., a_i, ...) & P_c(x_0, ... x_m, ..., b_i, ...) & a_i \neq b_i\]
+and finally
+\[\bot \leftarrow P_c(\vec{x})
+The modification to $\Pi$ which takes place is no longer adding $\neg P$, but rather adding an assumption to one of the $P_d$ predicates.
+Otherwise, the transformation is identical.
+
+Essentially what this does is add the ability to use $P_d$ to select an aggregation on $P$ and promote it to $P_c$.
+If the aggregation is not the biggest one, or becomes not the biggest one, $\bot$ will be derived.
+This rules out any impossible circumscriptions.
+The same kripke structure described above gives rise to a stable semantics system again, only this time we are negating potentially infinite sets of facts at a time.
 \paragraph{call/cc}
 The major difference between this approach to negation and the stable-set approach is our addition of call/cc.
 In the stable-set approach, $\neg A \rightarrow A$ has no stable model.
@@ -362,9 +376,78 @@ Essentially, with call/cc we attempt to provide a way to produce a meaningful se
 
 As with circumscription, we will first describe this modification without the prior features, then extend it to work with them.
 We assume negation works as in the first half or the circumscription section.
-%TODO continue from here
+The only real change we need to make is to our accessibility relation.
+Specifically, we want an accessibility relation which allows non-negated assumptions to be added considered for assumption, but only in those cases where their negated form eventually leads to a contradiction.
+
+First, we reform the previous accessibility relation into a directed graph.
+\todo{Stop using EDB of and IDB of everywhere, and use $\Pi_I$ and $\Pi_E$ after defining}
+$\Pi \squigarrow \Pi'$ here means that $\Pi'$ is a world with exactly one more allowed assumption than $\Pi$, essentially a single-step version of $\leq$.
+If $\Pi$ and $\Pi'$ have the same rules, and $\Pi'_E = \Pi_E \cup \{\neg P\}$ (and $\neg P \not \in \Pi_E$), then $\Pi \squigarrow \Pi'$.
+We now define $\leq$ inductively.
+$\Pi \leq \Pi$.
+If $\Pi_0 \leq \Pi_1$, and $\Pi_1 \squigarrow \Pi_2$, then $\Pi_0 \leq \Pi_2$.
+
+To add support for call-cc, and unstable sets in general, we have two basic scenarios that $\squigarrow$ needs to be modified for.
+The uncovered cases here always start with, for some $P$, $\Pi$ with $\neg P$ appended is not a world, because $\Pi$ with $\neg P$ is able to derive $\bot$, and $\Pi \not \models P$.
+In the first scenario, $\Pi$ with $P$ forms a legal $\Pi'$, and we want to add $\Pi \squigarrow \Pi'$ for that instead.
+In the second scenario, neither $P$ nor $\neg P$ may be legally added to $\Pi$, yet we do not have that $\Pi$ models either of them.
+Essentially, $P$ is \emph{inconsistent}.
+While there are some interesting logics involving inconsistency\todo{citations}, it is not an intended feature of Holmes.
+To deal with this, we preclude programs which have this property from being worlds.
+Note that the input program will always be safe here.
+It has no negated terms in the head, nor is a negated fact allowed in the EDB.
+As a result, without first having made a negated assumption, $\bot$ cannot be derived, and so it will always be legal to make an assumption in at least one direction from the base world for a given fact.
+
+More concretely, we now say a program $\Pi$ is a world iff:
+% Here, P is a non-negated ground fact, and it's universally quantified
+\begin{itemize}
+	\item $\Pi \not \models \bot$
+	\item If $\Pi \not \models P$ and $\Pi \not \models \neg P$, then $\Pi \squigarrow \Pi'$ s.t. $P \in \Pi'_E$ or $\neg P \in \Pi'_E$
+\end{itemize}
+
+And we say $\Pi \squigarrow \Pi'$ if
+\begin{itemize}
+	\item $\Pi'$ is a world
+	\item $\Pi \not \models \bot$
+	\item $\Pi \not \models P$
+	\item $\Pi \not \models \neg P$
+	\item One of:
+	\begin{itemize}
+		\item $\Pi'$ is $\Pi$ with $\neg P$ added
+		\item Adding $\neg P$ does not yield a legal world, and $\Pi' is $\Pi$ with $P$ added.
+	\end{itemize}
+\end{itemize}
+
+Reconstructing the $\leq$ relation inductively as above, we have acquired call/cc.
+Effectively what we have done is allowed positive assumptions, but only in the case that negative assumptions fail.
+We have also structurally ruled out those cases where we have made the truth or falsity of a fact inconsistent.
+It would be possible to write similar rules without the forced negative bias (simply removing the restriction in the $\squigarrow$ relation), and would possibly even be beneficial for a logic with guaranteed finite universes.
+However, as we will see next, this enforced negative bias allows us to have this looser form of negation even in the presence of infinite universes.
+
+We actually need even less modification than last time to reach actual circumscription.
+In this case, we are still adding positive facts, but we need different restrictions since it is not as simple as $P$ versus $\neg P$.
+
+We say a program $\Pi$ is a world iff:
+\begin{itemize}
+	\item $\Pi \not \models \bot$
+	\item If for any $P_c$, $\vec{x}$, $\vec{b} with $\Pi \models P(\vec{x}, \vec{b})$, there does not exist a $\vec{a}$ so that $\Pi \models P_c(\vec{x}, \vec{a})$, then $\Pi \squigarrow \Pi'$ s.t. for some $\vec{c}$ $P_c(\vec{x}, \vec{c}) \in \Pi'_E$ or $\exists \vec{d}. \Pi \not \models P(\vec{x}, \vec{d}) \& P(\vec{x}, \vec{d}) \in \Pi'_E$
+\end{itemize}
+
+And we say $\Pi \squigarrow \Pi'$ if for some $\vec{x}$, there isn't a $\vec{a}$ so that
+\begin{itemize}
+	\item $\Pi'$ is a world
+	\item $\Pi \not \models \bot$
+	\item $\Pi \not \models P_c(\vec{x}, \vec{a})$
+	\item One of:
+	\begin{itemize}
+		\item $\Pi'$ is $\Pi$ with $P_c(\vec{x}, \vec{a})$ added
+		\item There isn't a legal world with $P_c(\vec{x}, \vec{a})$ added, but if we added it anyways, and deleted the rule for inconsistency on $P_c$ for $\vec{x}$, that world would have a final fact $Q(\vec{y})$, and $\Pi'$ is $\Pi$ extended with $Q(\vec{y})$
+	\end{itemize}
+\end{itemize}
 
 \paragraph{Summary}
+\todo{Design unified notation in summary, revised other parts to use unified notation}
+
 Model Components:
 \begin{itemize}
 	\item Universe, $U$ (model native identifiers for values placed in fields)
