Split holmes chapter into multiple files

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -80,7 +80,7 @@ Manuel Egele, Boston University
 \mainmatter
 \input{introduction}
 \input{background}
-\input{holmes}
+\input{holmes/holmes}
 \input{alias}
 \input{codependence}
 \input{staticflow}
