--- a/thesis/holmes/holmes.tex
+++ b/thesis/holmes/holmes.tex
@@ -147,103 +147,7 @@ In our case, we are constantly watching for P to be determined to be true, and i
 This feature is invisible to the user other than for performance characteristics.
 The user need only specify their rules as usual, circumscribing over things which need to be complete, and if this \texttt{call/cc} condition arises, it will be automatically dealt with by reasoning forwards from the new (expanded) circumscription, after retracting relevant other derivations.
 
-\section{Informal Semantics}
-%TODO review and rewrite this whole chunk, it was written before I decided it was informal, so it mixes the formal and the informal
-Before giving a more formal treatment of what outputs are correct for a given Holmes program, we describe how each feature functions informally, as you might see in a programmer's guide.
-Afterwards, there is a simple traced execution of a toy program which employs all of these features.
-
-\subsection{Callbacks}
-External predicates are traditionally expressed as predicates in the language, equipped with modes for each field and a function which transforms from the input fields to some representation of the output fields.
-This model can add some complexity to both the inference engine and writing code in the language.
-If an external predicate is present in the match, how should it be searched?
-There are several potential strategies, and complexity only increases when there are two external predicates present.
-From the programmer's point of view, the monodirectionality of the predicate is concealed, which can lead to surprise when a predicate can't be used the same way as others.
-
-To address this, I explicitly phase the application of rules.
-First, there is an initial match phase that works as usual.
-Then, optionally, the rule may have a function which takes as input a set of assignments to variables in the match clause, and gives back a list of assignments to any variables present in the head which were not defined in the match.
-This list may be empty, and this result indicates match failure.
-
-For example, in the rule
-\begin{verbatim}
-simple_func: p(y) <- q(x) & r(x) + func
-\end{verbatim}
-\texttt{func} would be expected to take in the value of x, and return a list of values for y.
-
-\subsection{Monotonic Aggregation}
-Monotonic aggregation is defined as a property of a subset of predicate fields.
-A result is legal in a match against an aggregated predicate if there exists a specific subset of derivable facts which match via equality on all non-aggregation fields, and for whom applying the aggregation function provided to the remaining fields would produce the result.
-A result is mandatory if the selected subset is the largest possible for some indices.
-For a predicate \texttt{p(i32, i32, IntSet\^{}union, i64\^{}max)}, an attempt to match against \texttt{p(a, b, c, d)} with a database \texttt{p(1, 2, {3}, 4), p(1, 2, {4}, 3), p(1, 1, {}, 7)} would be \texttt{p(1, 2, {3, 4}, 4), p(1, 1, {}, 7)}.
-
-%TODO finish section
-%TODO: mention reason for not using a lattice initialism is that there would be a potentially infinite number of matches that produce it, so matching against a predicate with aggregation whose indices were not fully constrained by the rest of the match clause would produce an infinite number of results in the case of non-finite domains
-\subsection{Hypothetical Circumscription}
-\label{sec:inf-circ}
-Hypothetical circumscription extends monotonic aggregation by allowing the rule to receive only the largest subset.
-
-This is a form of negation.
-To illustrate, consider the program
-\begin{verbatim}
-p(unit)
-neg_p(unit)
-q(bool^and)
-
-q_init: q(true) <-
-pq: q(false) <- p(())
-neg: neg_p(()) <- ~q(true)
-\end{verbatim}
-
-The predicate \texttt{neg_p} now contains the negation of \texttt{p}.
-This formulation can be extended in a straightforwards way for predicates whose indices have finite domain:
-
-\begin{verbatim}
-p(finite_type)
-neg_p(finite_type)
-q(finite_type, bool^and)
-
-q_init_i: q(x_i, true) <- 
-pq: q(x, false) <- p(x)
-neg: neg_p(x) <- ~q(x, true)
-\end{verbatim}
-where \texttt{q_init_i} is reproduced for every $x_i$ in \texttt{finite_type}
-
-The intuitive reason for this connection is that knowing the largest possible aggregation also entails the knowledge that all of the other possible members of the aggregation cannot be derived.
-In the case of finite domain indices, this allows us to negate the predicate in the way described above, since we can subtract the aggregation returned form the universal aggregation.
-
-When the domain of an index is infinite, we could still construct the negation through use of an external function capable of enumerating the index values, e.g.
-\begin{verbatim}
-q_init: q(x_0, true) <-
-q_step: q(x', true) <- q(x, true) + succ
-\end{verbatim}
-however, the resulting database would be infinite, so this would really only have solid meaning under a minimal model interpretation.
-
-Since I am adding a construct with the power of negation, a natural question is how I will deal with inconsistency.
-The traditional approach here is to stage computation, requiring a predicate to saturate before its negation can be considered.
-For the call/cc feature next, and to deal with new facts (e.g. from a concrete program execution) added to the database after inference has begun, I can't actually use this stratification.
-
-In an intuitive form, my solution here is to consider all negation as hypothetical, and consider answers from as far along a consistent hypothetical tree as possible.
-
-More formally, I describe this relation using kripke semantics.
-Initially, I will deal only with finite-domain indices.
-When dealing with finite domain indices, we can rewrite (however inefficiently) every rule requiring circumscription to one making use of negation.
-Specifically, for each rule containing a circumscription in the match, for all aggregated variables, for all values in their domain, write the rule with the variable substituted for the value and appended with the negation of all other values.
-%TODO proof sketch of the equivalence.
-Chaining this with the rewriting of aggregation into a less efficient form without aggregation, and using the finite domain property to reduce external functions to tables, I can reason about datalog with negation here.
-Specifically, assuming a finite domain for all index variables, all extensions described so far can be reduced to basic datalog with the added ability to negate clauses in the body of a rule.
-Note that negated heads are not required here, and so are not under consideration.
-
-Define a candidate world $\omega$ to be a tuple of a context $\Gamma$ containing program rules and some set of negated facts $N$.
-Define $\omega \models P$ to mean that $P$ is in the minimal model of $\Gamma$, interpreting the matching of negated facts to only be able to match those facts explicitly in $N$.
-Define the candidate accessibility relation $\omega \cac \omega'$ to mean that $\omega'$ is $\omega$ with its $N$ augmented with a $P$ not in $N$, which is present in the right hand side of some rule in $\Gamma$.
-
-Define a world to be a candidate world in which $\omega \models P \imp \omega \not \models \neg P$, $\models$ to be as in the candidate case, and the accessibility relation $\leq$ to be the subset of $\cac$ which is only between worlds at this level, augmented with reflexivity.
-Additionally, define $w \vdash P$ to mean either $w \models P$, or in the case of $P = A \rightarrow B$, $\forall w'. w \leq w', w' \vdash A \imp w' \vdash B$.
-This forms an intuitionistic Kripke frame.
-By definition of the upgrade from candidate world to world, $w \not \models \bot$.
-By construction of $\cac$, the accessibility relation leads only to worlds where more things are in the context, and since the only non-monotonic operation in the logic is circumscription, which is excluded at the $\models$ layer, $(w \leq w') \imp (w \models P \imp w' \models P)$.
-
-\subsection{call/cc}
+\input{holmes/informal}
 \input{holmes/formal}
 \input{holmes/impl}
 \section{Benchmarks}
