--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -718,4 +718,25 @@
   file = {/home/maurer/Zotero/storage/DELD7PHL/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf;/home/maurer/Zotero/storage/G3PULW6U/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf}
 }
 
+@article{wellfounded,
+  title = {The Well-Founded Semantics for General Logic Programs},
+  volume = {38},
+  number = {3},
+  journal = {Journal of the ACM (JACM)},
+  author = {Van Gelder, Allen and Ross, Kenneth A. and Schlipf, John S.},
+  year = {1991},
+  pages = {619--649},
+  file = {/home/maurer/Zotero/storage/9MSTBAYL/Van Gelder et al. - 1991 - The well-founded semantics for general logic progr.pdf;/home/maurer/Zotero/storage/4Q82B5ZI/citation.html}
+}
+
+@inproceedings{wf-agg,
+  title = {The Well-Founded Semantics of Aggregation},
+  booktitle = {Proceedings of the Eleventh {{ACM SIGACT}}-{{SIGMOD}}-{{SIGART}} Symposium on {{Principles}} of Database Systems},
+  publisher = {{ACM}},
+  author = {Van Gelder, Allen},
+  year = {1992},
+  pages = {127--138},
+  file = {/home/maurer/Zotero/storage/58XVSCST/Van Gelder - 1992 - The well-founded semantics of aggregation.ps;/home/maurer/Zotero/storage/LSD52J4E/citation.html}
+}
+
 
