--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,15 +1,4 @@
 \chapter{Introduction}
-% General motivation
-% * Bulk of software is binary only
-% * Reasoning about the behavior and safety of software is important
-% * Need more powerful inspection capabilities
-%
-% * Existing approaches are not integrated
-% * Existing approaches play fast and loose with soundness/assumptions
-% * When approaches are integrated, effort is being wasted on reimplementation
-% * Data cycling doesn't occur
-%
-% * Can a tailored logic language solve this problem?
 Poorly or maliciously coded software can cause significant damage.
 The bulk of modern software is distributed in binary-only form, for reasons ranging from a desire to keep proprietary information secret to wanting to avoid compilation or interpretation overhead on the client.
 Unfortunately, inspecting the behavior of machine code is difficult:
@@ -49,7 +38,7 @@ The authors were able to prune a number of search paths via this combination, le
 With a (backwards-chaining\footnote{Goal driven execution, more explanation in \S\ref{sec:bchain}}) representation of may and must analyses separately, their analysis could be derived by adding a relatively small number of rules to describe the yes/no property check fact they introduce.
 
 % External code
-Using a fairly common extension of logic language, we can even call out to code not written as logical rules\footnote{We will use a system similar to external predicates \S\ref{sec:extpred}}.
+Using a fairly common extension of logic language, we can even call out to code not written as logical rules\footnote{We use a system similar to external predicates \S\ref{sec:extpred}}.
 This makes it possible to repurpose previously written analyses, or to write new analyses which may not be best represented as rules.
 There are still some restrictions on how such code can operate (for example, no preserved state across calls) but taking this approach gives the flexibility to be an integration system.
 
@@ -62,20 +51,18 @@ Co-dependence in binary program analysis can be represented in a logic language 
 % * Show the power by
 %   * Implementing the integration of several real analyses using the language
 %   * Attempting to do so without using circumscription or aggregation, and seeing what happens.
-I will investigate this approach by implementing \sysname, a logic language engine designed for the integration of binary analyses.
-I will also implement and integrate several real analyses using \sysname.
-This implementation should provide evidence for feasibility of using a logic language to describe and evaluate cyclically dependent analyses and provide a model for checking result quality.
-
-% * Show it can be reasoned about by
-%   * Proving formally the monotonicity of
-%     * Aggregation with our restrictions
-%     * Circumscription with our restrictions
-%   * Attempting to slice out a restricted segment which is terminating
-I will attempt to demonstrate that this approach, as realized in \sysname, can be reasoned about by writing proofs supporting the soundness of the reasoning system.
-Primarily, this will focus on my extensions to the base logic language (datalog), since its properties are well known.
-I will attempt to prove the monotonicity of my aggregation scheme (\S~\ref{sec:monagg}) and the soundness of my circumscription (\S~\ref{sec:hypcirc}).
-If time permits, I will try to determine a restricted segment of \sysname\ which can be proved to terminate, providing a subset within which to write preprocessing phases.
-
-I intend to show improvements from integration by comparing integrated and unintegrated analyses against ground truth on a number of tasks.
-Primarily, I intend to focus on CFG recovery, value analysis, type recovery, and alias analysis.
-In the case of CFG recovery, I anticipate success even more strongly than in the other cases, as it should meet or exceed the boost previously observed\cite{jakstab} due to the presence of strictly more information.
+I investigated this approach by designing implementing \sysname, a logic language engine designed for the integration of binary analyses.
+I implemented codependent alias analysis, use-after-free detection, and control flow recovery using \sysname.
+This implementation provides evidence for the feasibility of using a logic language as an integration layer for cyclically dependent analyses.
+For this purpose I invented a novel form of negation, based on circumscription~\cite{circumscription}, which is suited to this particular application (\S~\ref{sec:inf-circ}).
+I define the semantics of the resulting logic language in terms of a Kripke structure (\S~\ref{sec:formal}).
+I demonstrate that this approach, as realized in \sysname, can be reasoned about by connecting to the semantics to a search strategy.
+I show the search strategy will
+\begin{itemize}
+	\item Make progress (\S~\ref{sec:progress})
+	\item Only output results sound with respect to the semantics (\S~\ref{sec:soundness})
+	\item In a restricted set of situations, terminate (\S~\ref{sec:term})
+\end{itemize}
+I show that \sysname can implement different sensitivities of alias analysis, and show how this affects practical use-after-free classification (\S~\ref{sec:alias}).
+I conclude that \sysname does solve the problem of co-dependence in program analysis and allow analyses to be specified in a modular fashion(\S~\ref{sec:conc}).
+Finally, I discuss ways this approach could be extended to make it a more powerful and complete solution to the problem of analysis integration (\S~\ref{sec:future}).
